Bug #327037 --> intel mac compiler bug with -O2 was causing newsgroup names to not show up correctly.

r=josh
sr=dveditz
a=mscott/dveditz