mozilla/mailnews/news/src/nsNewsFolder.cpp
@@ -719,9 +719,11 @@ nsresult nsMsgNewsFolder::AbbreviatePrettyName(PRUnichar ** prettyName, PRInt32 
   PRInt32    newword = 0;     // == 2 if done with all abbreviated words
   
   fullwords = 0;
+  char currentChar;
   for (PRInt32 i = 1; i < length; i++) {
+    currentChar = name[i];
     if (newword < 2) {
-      switch (name[i]) {
+      switch (currentChar) {
       case '.':
         fullwords++;
         // check if done with all abbreviated words...
@@ -740,7 +742,7 @@ nsresult nsMsgNewsFolder::AbbreviatePrettyName(PRUnichar ** prettyName, PRInt32 
           continue;
       }
     }
-    out += name[i];
+    out += currentChar;
   }
 
   if (!prettyName)
